// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`doTree Should build pot file 1`] = `
{
  "": {
    "Huge": {
      "comments": {
        "reference": "tests/fixtures/php.php:252",
      },
      "msgid": "Huge",
      "msgid_plural": undefined,
      "msgstr": [],
    },
    "Large": {
      "comments": {
        "reference": "tests/fixtures/php.php:247",
      },
      "msgid": "Large",
      "msgid_plural": undefined,
      "msgstr": [],
    },
    "Light green cyan to vivid green cyan": {
      "comments": {
        "reference": "tests/fixtures/php.php:189",
      },
      "msgid": "Light green cyan to vivid green cyan",
      "msgid_plural": undefined,
      "msgstr": [],
    },
    "Luminous vivid amber to luminous vivid orange": {
      "comments": {
        "reference": "tests/fixtures/php.php:194",
      },
      "msgid": "Luminous vivid amber to luminous vivid orange",
      "msgid_plural": undefined,
      "msgstr": [],
    },
    "Luminous vivid orange to vivid red": {
      "comments": {
        "reference": "tests/fixtures/php.php:199",
      },
      "msgid": "Luminous vivid orange to vivid red",
      "msgid_plural": undefined,
      "msgstr": [],
    },
    "Regular": {
      "comments": {
        "reference": "tests/fixtures/php.php:242",
      },
      "msgid": "Regular",
      "msgid_plural": undefined,
      "msgstr": [],
    },
    "Small": {
      "comments": {
        "reference": "tests/fixtures/php.php:237",
      },
      "msgid": "Small",
      "msgid_plural": undefined,
      "msgstr": [],
    },
    "Vivid cyan blue to vivid purple": {
      "comments": {
        "reference": "tests/fixtures/php.php:179",
      },
      "msgid": "Vivid cyan blue to vivid purple",
      "msgid_plural": undefined,
      "msgstr": [],
    },
    "Vivid green cyan to vivid cyan blue": {
      "comments": {
        "reference": "tests/fixtures/php.php:184",
      },
      "msgid": "Vivid green cyan to vivid cyan blue",
      "msgid_plural": undefined,
      "msgstr": [],
    },
    "light grayish magenta": {
      "comments": {
        "reference": "tests/fixtures/php.php:123",
      },
      "msgid": "light grayish magenta",
      "msgid_plural": undefined,
      "msgstr": [],
    },
    "sdasdasdasd": {
      "comments": {
        "reference": "tests/fixtures/php.php:7",
        "translator": "ciao2!",
      },
      "msgid": "sdasdasdasd",
      "msgid_plural": undefined,
      "msgstr": [],
    },
    "strong magenta": {
      "comments": {
        "reference": "tests/fixtures/php.php:118",
      },
      "msgid": "strong magenta",
      "msgid_plural": undefined,
      "msgstr": [],
    },
    "very dark gray": {
      "comments": {
        "reference": "tests/fixtures/php.php:133",
      },
      "msgid": "very dark gray",
      "msgid_plural": undefined,
      "msgstr": [],
    },
    "very light gray": {
      "comments": {
        "reference": "tests/fixtures/php.php:128",
      },
      "msgid": "very light gray",
      "msgid_plural": undefined,
      "msgstr": [],
    },
  },
}
`;

exports[`doTree Should build pot file php 1`] = `
{
  "": {
    "Huge": {
      "comments": {
        "reference": "tests/fixtures/sourcedir/file.php:252",
      },
      "msgid": "Huge",
      "msgid_plural": undefined,
      "msgstr": [],
    },
    "Large": {
      "comments": {
        "reference": "tests/fixtures/sourcedir/file.php:247",
      },
      "msgid": "Large",
      "msgid_plural": undefined,
      "msgstr": [],
    },
    "Light green cyan to vivid green cyan": {
      "comments": {
        "reference": "tests/fixtures/sourcedir/file.php:189",
      },
      "msgid": "Light green cyan to vivid green cyan",
      "msgid_plural": undefined,
      "msgstr": [],
    },
    "Luminous vivid amber to luminous vivid orange": {
      "comments": {
        "reference": "tests/fixtures/sourcedir/file.php:194",
      },
      "msgid": "Luminous vivid amber to luminous vivid orange",
      "msgid_plural": undefined,
      "msgstr": [],
    },
    "Luminous vivid orange to vivid red": {
      "comments": {
        "reference": "tests/fixtures/sourcedir/file.php:199",
      },
      "msgid": "Luminous vivid orange to vivid red",
      "msgid_plural": undefined,
      "msgstr": [],
    },
    "Regular": {
      "comments": {
        "reference": "tests/fixtures/sourcedir/file.php:242",
      },
      "msgid": "Regular",
      "msgid_plural": undefined,
      "msgstr": [],
    },
    "Small": {
      "comments": {
        "reference": "tests/fixtures/sourcedir/file.php:237",
      },
      "msgid": "Small",
      "msgid_plural": undefined,
      "msgstr": [],
    },
    "Vivid cyan blue to vivid purple": {
      "comments": {
        "reference": "tests/fixtures/sourcedir/file.php:179",
      },
      "msgid": "Vivid cyan blue to vivid purple",
      "msgid_plural": undefined,
      "msgstr": [],
    },
    "Vivid green cyan to vivid cyan blue": {
      "comments": {
        "reference": "tests/fixtures/sourcedir/file.php:184",
      },
      "msgid": "Vivid green cyan to vivid cyan blue",
      "msgid_plural": undefined,
      "msgstr": [],
    },
    "light grayish magenta": {
      "comments": {
        "reference": "tests/fixtures/sourcedir/file.php:123",
      },
      "msgid": "light grayish magenta",
      "msgid_plural": undefined,
      "msgstr": [],
    },
    "sdasdasdasd": {
      "comments": {
        "reference": "tests/fixtures/sourcedir/file.php:7",
        "translator": "ciao2!",
      },
      "msgid": "sdasdasdasd",
      "msgid_plural": undefined,
      "msgstr": [],
    },
    "strong magenta": {
      "comments": {
        "reference": "tests/fixtures/sourcedir/file.php:118",
      },
      "msgid": "strong magenta",
      "msgid_plural": undefined,
      "msgstr": [],
    },
    "very dark gray": {
      "comments": {
        "reference": "tests/fixtures/sourcedir/file.php:133",
      },
      "msgid": "very dark gray",
      "msgid_plural": undefined,
      "msgstr": [],
    },
    "very light gray": {
      "comments": {
        "reference": "tests/fixtures/sourcedir/file.php:128",
      },
      "msgid": "very light gray",
      "msgid_plural": undefined,
      "msgstr": [],
    },
  },
}
`;
